--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "vitest": "^3.2.4"
   },
   "engines": {
-    "node": ">=22.17.0"
+    "node": "^22.17.0"
   },
   "volta": {
     "node": "22.17.0"
